--- a/templates/include/nav.html.twig
+++ b/templates/include/nav.html.twig
@@ -3,7 +3,7 @@
         <a href="{{ path('main_accueil') }}" title="retour accueil">
             <img src="{{ asset('img/logo toobib.jpg') }}" alt="Toobib Logo"></a>
     </h1>
-    <a href="#" title="Retour Accueil">Accueil</a>
+    <a href="{{ path('main_accueil')}}" title="Retour Accueil">Accueil</a>
 
     <a href="#">Se Connecter</a>
 
