5 : preparation fonction rechercher un toobib

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
 
 {% endblock %}
 
-
+{#pied de page du site#}
 <footer style="background-color: #0000FF">
     <div class="container">&copy; par l'association Interhop {{ "now"|date("Y") }} </div>
 </footer>
