--- a/templates/include/nav.html.twig
+++ b/templates/include/nav.html.twig
@@ -20,7 +20,11 @@
 
     <a href="#">Link 4</a>
 
-    <a href="#">Recherche ton Toobib !</a>
+    {# TODO comment inclure bouton pour lancer la recherche #}
+    <a href="#"><label for="searchbar"></label><input id="searchbar" type="text"
+                                                      name="search" placeholder="Recherche ton Toobib !"/>
+        <button type="submit">Rechercher</button>
+    </a>
 
     <span class="line"></span>
 
