--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -9,6 +9,11 @@
         trouve ton soignant
         dans l'annuaire officiel
     </h2>
+    <p>
+        <label for="searchbar"></label>
+        <input id="searchbar" type="text" name="search" placeholder="Recherche ton Toobib !"/>
+        <button type="submit">Rechercher</button>
+    </p>
     <p>Tu es praticien et tu souhaites
         Une messagerie instantanée ?
         <br>
