7 : mise en place de la page de connexion, avec hashage du mot de passe et l'entity User (qui sera celle du professionnel qui se connecte) + création de la base de données dans MySQL, celle-ci est vide pour le moment.

--- a/templates/include/nav.html.twig
+++ b/templates/include/nav.html.twig
@@ -15,7 +15,7 @@
     </h1>
     <a href="{{ path('main_accueil')}}" title="Retour Accueil">Accueil</a>
 
-    <a href="#">Se Connecter</a>
+    <a href="{{ path('app_login')}}">Se Connecter</a>
 
     <a href="{{ path('main_aPropos')}}" title="A propos">A propos</a>
 
