9.création dans mySQL de la table User

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
 {#entete du site#}
 <header style="background-color: #99CCCC">
 
-
+{# element div id=root #}
 
     <nav> {% include('include/nav.html.twig')%} </nav>
 
