--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,5 +38,7 @@
     <button class="btn btn-lg btn-primary" type="submit">
         Se Connecter
     </button>
+
+    <div> Pas encore inscrit ? Enregistre toi <a href="{{ path('app_register')}}">ici</a> !</div>
 </form>
 {% endblock %}
